tests/ui/boolean_enforcement/fail/or_int_input_pg.stderr
error[E0277]: `[UserAge; 1]` is not a valid SQL expression
  --> tests/ui/boolean_enforcement/fail/or_int_input_pg.rs:14:33
   |
14 |     let _ = or::<PostgresValue, _, _>([user.age]);
   |                                 ^ expected a column, literal, or expression — does this type implement Expr?
   |
   = help: the trait `Expr<'_, drizzle::postgres::prelude::PostgresValue<'_>>` is not implemented for `[UserAge; 1]`
   = note: SQL expressions must have an associated SQLType, Nullable, and Aggregate kind
help: the following other types implement trait `Expr<'a, V>`
  --> core/src/expr/primitives.rs
   |
   | / impl<'a, V> Expr<'a, V> for &'a [u8]
   | | where
   | |     V: SQLParam + 'a + From<&'a [u8]> + From<Vec<u8>> + From<u8> + Into<Cow<'a, V>>,
   | |____________________________________________________________________________________^ `&[u8]`
...
   | / impl<'a, V, const N: usize> Expr<'a, V> for [u8; N]
   | | where
   | |     V: SQLParam + 'a + From<&'a [u8]> + From<Vec<u8>> + From<u8> + Into<Cow<'a, V>>,
   | |____________________________________________________________________________________^ `[u8; N]`
note: required by a bound in `or`
  --> core/src/expr/logical.rs
   |
   | pub fn or<'a, V, L, R>(
   |        -- required by a bound in this function
...
   |     L: Expr<'a, V>,
   |        ^^^^^^^^^^^ required by this bound in `or`

error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> tests/ui/boolean_enforcement/fail/or_int_input_pg.rs:14:13
   |
14 |     let _ = or::<PostgresValue, _, _>([user.age]);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^------------ argument #2 is missing
   |
note: function defined here
  --> core/src/expr/logical.rs
   |
   | pub fn or<'a, V, L, R>(
   |        ^^
help: provide the argument
   |
14 |     let _ = or::<PostgresValue, _, _>([user.age], /* right */);
   |                                                 +++++++++++++

error[E0277]: `[UserAge; 1]` is not a valid SQL expression
  --> tests/ui/boolean_enforcement/fail/or_int_input_pg.rs:14:13
   |
14 |     let _ = or::<PostgresValue, _, _>([user.age]);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected a column, literal, or expression — does this type implement Expr?
   |
   = help: the trait `Expr<'_, drizzle::postgres::prelude::PostgresValue<'_>>` is not implemented for `[UserAge; 1]`
   = note: SQL expressions must have an associated SQLType, Nullable, and Aggregate kind
help: the following other types implement trait `Expr<'a, V>`
  --> core/src/expr/primitives.rs
   |
   | / impl<'a, V> Expr<'a, V> for &'a [u8]
   | | where
   | |     V: SQLParam + 'a + From<&'a [u8]> + From<Vec<u8>> + From<u8> + Into<Cow<'a, V>>,
   | |____________________________________________________________________________________^ `&[u8]`
...
   | / impl<'a, V, const N: usize> Expr<'a, V> for [u8; N]
   | | where
   | |     V: SQLParam + 'a + From<&'a [u8]> + From<Vec<u8>> + From<u8> + Into<Cow<'a, V>>,
   | |____________________________________________________________________________________^ `[u8; N]`
